Completed with instructions

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -6,14 +6,35 @@
   <title>Ayomide's Lab 1</title>
 </head>
 <body>
-  
+  <div>
+
+  </div>
+  <div>
+    <header><h1>Ayomide's Lab 1 for INST377</h1></header>
+    <div>
+      <div>
+        <h3>Album Names</h3>
+        <ol>
+          <li>Yeah Yeah Yeahs - Fever To Tell</li>
+          <li>Underworld - Dubnobasswithmyheadman</li>
+          <li>Young Fathers - Cocoa Butter</li>
+          <li>SleighBells - Treats</li>
+          <li>Handsome Furs - Face Control</li>
+        </ol>
+      </div>
+      <div>
+        <h3>Image Carousel</h3>
+        <img src='images/mochi.gif'/>
+        <img src='images/mochi.jpg'/>
+        <img src='images/mochi.png'/>
+        <img src='images/mochi.svg'/>
+      </div>
+      <div>Description of Images.</div>
+    </div>
+  </div>
+  <footer><a href="http://github.com/aolusany1/INST377-Lab-Work" target="_blank" rel="noopener noreferrer">aolusany1</a></footer>
 </body>
 </html>
-include your HTML opening tags
-and your hidden "head" tag
-and your "title" tag
-
-
 full-width wrapper div
   header containing: YOUR NAME's Labs For INST377
   container div
@@ -26,6 +47,3 @@ full-width wrapper div
             four images of mochi from your readings, all square (they're four different image types!)
           div to contain a description or text
             description of images
-
-
-full-width page footer containing your github account name and a link to your gitHub account
