--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,3 +1,41 @@
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ayomide's Lab 1</title>
+  <link rel='stylesheet' href='style.css'/>
+</head>
+<body>
+  <div>
+
+  </div>
+  <div>
+    <header><h1>Ayomide's Lab 1 for INST377</h1></header>
+    <div>
+      <div>
+        <h3>Album Names</h3>
+        <ol>
+          <li>Yeah Yeah Yeahs - Fever To Tell</li>
+          <li>Underworld - Dubnobasswithmyheadman</li>
+          <li>Young Fathers - Cocoa Butter</li>
+          <li>SleighBells - Treats</li>
+          <li>Handsome Furs - Face Control</li>
+        </ol>
+      </div>
+      <div>
+        <h3>Image Carousel</h3>
+        <img src='images/mochi.gif'/>
+        <img src='images/mochi.jpg'/>
+        <img src='images/mochi.png'/>
+        <img src='images/mochi.svg'/>
+      </div>
+      <div>Description of Images.</div>
+    </div>
+  </div>
+  <footer><a href="http://github.com/aolusany1/INST377-Lab-Work" target="_blank" rel="noopener noreferrer">aolusany1</a></footer>
+</body>
+</html>
 Replace this with your complete HTML from Lab 1
 
 Hook it up to CSS by including style.css in the <head> tag
