alt image and description

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -23,11 +23,11 @@
         <div>
         <div class="right_section box">
           <h3>Image Carousel</h3>
-            <img src="images/mochi.gif" />
-            <img src="images/mochi.jpg" />
-            <img src="images/mochi.png" />
-            <img src="images/mochi.svg" />
-          <div class="box">Description of Images above.</div>
+            <img src="images/mochi.gif" alt="rice ball 1" />
+            <img src="images/mochi.jpg" alt="rice ball 2"/>
+            <img src="images/mochi.png" alt="rice ball 3"/>
+            <img src="images/mochi.svg" alt="rice ball 4"/>
+          <div class="box">Different versions of Mochi rice balls above.</div>
         </div>
         
       </div>
