alt image and description reedit

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -27,7 +27,7 @@
             <img src="images/mochi.jpg" alt="rice ball 2"/>
             <img src="images/mochi.png" alt="rice ball 3"/>
             <img src="images/mochi.svg" alt="rice ball 4"/>
-          <div class="box">Different versions of Mochi rice balls above.</div>
+          <div class="box">Different image versions of Mochi rice balls above.</div>
         </div>
         
       </div>
