fixed image size difference

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -20,13 +20,14 @@
             <li>Handsome Furs - Face Control</li>
           </ol>
         </div>
-        <div>
         <div class="right_section box">
           <h3>Image Carousel</h3>
+            <div class="grid img">
             <img src="images/mochi.gif" alt="rice ball 1" />
             <img src="images/mochi.jpg" alt="rice ball 2"/>
             <img src="images/mochi.png" alt="rice ball 3"/>
             <img src="images/mochi.svg" alt="rice ball 4"/>
+            </div>
           <div class="box">Different image versions of Mochi rice balls above.</div>
         </div>
         
