edited js and index3

--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -1,5 +1,50 @@
-<!--
-    Replace this with your working code from Lab 2, and include:
-    - The styles in this folder's `style.css`
-    - The script in script.js, which should be included via a `<script src="script.js" >` call before your closing </body> tag 
--->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ayomide's Lab 3</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="header"><h1>Ayomide's Lab 3 for INST377</h1></header>
+      <div class="container">
+        <div class="left_section box">
+          <h3>Album Names</h3>
+          <ol class="box">
+            <li>Yeah Yeah Yeahs - Fever To Tell</li>
+            <li>Underworld - Dubnobasswithmyheadman</li>
+            <li>Young Fathers - Cocoa Butter</li>
+            <li>SleighBells - Treats</li>
+            <li>Handsome Furs - Face Control</li>
+          </ol>
+        </div>
+        <div class="right_section box">
+          <h3>Image Carousel</h3>
+            <div class="carousel">
+                <button class="prev">prev</button>
+                <div class="slides ">
+                    <div class="carousel_item visible"><img src="images/Kite1.png" alt="Kite number 1" /></div>
+                    <div class="carousel_item hidden"><img src="images/Kite2.png" alt="Kite number 2"/></div>
+                    <div class="carousel_item hidden"><img src="images/Kite3.png" alt="Kite number 3"/></div>
+                    <div class="carousel_item hidden"><img src="images/Kite4.png" alt="Kite number 4"/></div>
+                </div>
+                <button class="next">next</button>
+            </div>
+          <div class="box">Different images of kites.</div>
+        </div>
+        
+      </div>
+    </div>
+    <footer class="footer">
+      YOUR GITHUB ACCOUNT NAME <a
+        href="http://github.com/aolusany1/INST377-Lab-Work"
+        target="_blank"
+        rel="noopener noreferrer"
+        >aolusany1</a
+      >
+    </footer>
+    <script src="script.js" ></script>
+  </body>
+</html>
