--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -1,14 +1,40 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ayomide's Lab 4 for INST377</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <h1>Ayomide's INST377 Lab 4</h1>
+      </header>
+      <div class="container">
+        <div class="left_section box">
+            <h3>Form Inputs</h3>
+          <form action="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json" class="box">
+            <label for="resto">Restaurant's name</label>
+            <input type="text" name="resto" id="resto" />
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+        <div class="right_section box">
+          <h3>Local Restaurants</h3>
+          <div class="restaurant_list box">A list of local restaurants.</div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+        YOUR GITHUB ACCOUNT NAME <a
+          href="http://github.com/aolusany1/INST377-Lab-Work"
+          target="_blank"
+          rel="noopener noreferrer"
+          >aolusany1</a
+        >
+    </footer>
+  </body>
 </html>
 <!-- Bring in your successful HTML/CSS from the Flexbox lab -->
 <!-- Try typing 'doc' at the top of this file and pressing "tab" -->
