--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -13,8 +13,11 @@
       </header>
       <div class="container">
         <div class="left_section box">
-            <h3>Form Inputs</h3>
-          <form action="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json" class="box">
+          <h3>Form Inputs</h3>
+          <form
+            action="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json"
+            class="box"
+          >
             <label for="resto">Restaurant's name</label>
             <input type="text" name="resto" id="resto" />
             <button type="submit">Submit</button>
@@ -27,22 +30,13 @@
       </div>
     </div>
     <footer class="footer">
-        YOUR GITHUB ACCOUNT NAME <a
-          href="http://github.com/aolusany1/INST377-Lab-Work"
-          target="_blank"
-          rel="noopener noreferrer"
-          >aolusany1</a
-        >
+      YOUR GITHUB ACCOUNT NAME
+      <a
+        href="http://github.com/aolusany1/INST377-Lab-Work"
+        target="_blank"
+        rel="noopener noreferrer"
+        >aolusany1</a
+      >
     </footer>
   </body>
 </html>
-<!-- Bring in your successful HTML/CSS from the Flexbox lab -->
-<!-- Try typing 'doc' at the top of this file and pressing "tab" -->
-<!-- if your development environment is set up correctly -->
-<!-- the Emmett plugin will set this file up for you -->
-
-<!-- Requirements -->
-<!-- Your page will need a form in it with an 'action' to /api and a single text field with an id/name of "resto" -->
-<!-- If you open /routes/apiRoutes and go to line 38 you will find the server side answer to your request! -->
-
-<!-- This week doesn't have a script.js file in it, because you're focusing on HTML and CSS -->
