--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -19,7 +19,7 @@
             class="box"
           >
             <label for="resto">Restaurant's name</label>
-            <input type="text" name="resto" id="resto" />
+            <input type="text" id="resto" />
             <button type="submit">Submit</button>
           </form>
         </div>
