--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -1,3 +1,47 @@
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ayomide's Lab 5 for INST377</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <h1>Ayomide's INST377 Lab 5</h1>
+      </header>
+      <div class="container">
+        <div class="left_section box">
+          <h3>Form Inputs</h3>
+          <form
+            action="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json"
+            class="box main_form"
+          >
+            <label for="resto">Restaurant's name</label>
+            <input type="text" id="resto" name="resto" />
+            <button type="submit">Load Data</button>
+            <button type="button" class="filter_button">Filter Data</button>
+          </form>
+        </div>
+        <div class="right_section box">
+          <h3>Local Restaurants</h3>
+          <div class="restaurant_list box">A list of local restaurants.</div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      YOUR GITHUB ACCOUNT NAME
+      <a
+        href="http://github.com/aolusany1/INST377-Lab-Work"
+        target="_blank"
+        rel="noopener noreferrer"
+        >aolusany1</a
+      >
+    </footer>
+    <script src="./script.js"></script>
+  </body>
+</html>
 <!-- Bring in your successful HTML/CSS from the Flexbox lab -->
 <!-- Your page will need a form in it, but that form will not need an action
     You will need to add the attribute "name" to your input
