--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -7,3 +7,56 @@
 
     Try placing it at the same level in your element tree as your Submit button
 -->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ayomide's Lab 6 for INST377</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <h1>Ayomide's INST377 Lab 6</h1>
+      </header>
+      <div class="container">
+        <div class="left_section box">
+          <h3>Form Inputs</h3>
+          <form
+            action="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json"
+            class="box main_form"
+          >
+            <button type="button" id="data_load">Load County Data</button>
+            <label for="resto">Restaurant's name</label>
+            <input type="text" id="resto" name="resto" />
+            <button type="button" id="filter">Filter Data</button>
+            <button type="button" id="generate">Generate List</button>
+          </form>
+        </div>
+        <div class="right_section box">
+          <h3>Local Restaurants</h3>
+          <ol class="box" id="restaurant_list">
+            A list of local restaurants.
+          </ol>
+          <div class="lds-ellipsis" id="data_load_animation">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      YOUR GITHUB ACCOUNT NAME
+      <a
+        href="http://github.com/aolusany1/INST377-Lab-Work"
+        target="_blank"
+        rel="noopener noreferrer"
+        >aolusany1</a
+      >
+    </footer>
+    <script src="./script.js"></script>
+  </body>
+</html>
