--- a/client/lab_8/index.html
+++ b/client/lab_8/index.html
@@ -1,16 +1,20 @@
-
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ayomide's Lab 7 for INST377</title>
+    <title>Ayomide's Lab 8 for INST377</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+    integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+    crossorigin=""/>
     <link rel="stylesheet" href="style.css" />
+     <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
   </head>
   <body>
     <div class="wrapper">
       <header class="header">
-        <h1>Ayomide's INST377 Lab 7</h1>
+        <h1>Ayomide's INST377 Lab 8</h1>
       </header>
       <div class="container">
         <div class="left_section box">
@@ -20,14 +24,15 @@
             class="box main_form"
           >
             <button type="button" id="data_load">Load County Data</button>
-            <label for="resto">Restaurant's name</label>
+            <button type="button" id="data_clear">Clear County Data</button>
+            <label for="resto">Filter By Restaurant's name</label>
             <input type="text" id="resto" name="resto" />
-            <button type="button" id="filter">Filter Data</button>
             <button type="button" id="generate">Generate List</button>
           </form>
         </div>
         <div class="right_section box">
           <h3>Local Restaurants</h3>
+          <div id="map" class="box"> </div>
           <ol class="box" id="restaurant_list">
             A list of local restaurants.
           </ol>
